@@ -7,7 +7,9 @@
 	------------------------
 	+ Fixed dashboard errors if no IPv4/IPv6 subnets configured;
 	+ Fixed errors with viewing / modifying IP addresses for Operator users;
+	+ Added DNS resolving when editing/addin IP address;
 	
+		
 
 == 0.4
 
